# notesearch

./: Cargo.toml  README.md  migrations.toml  package.json  tsconfig.json
.github/workflows/: ci.yml
speechpipe/: package.json  speechpipe.js
src/: main.rs
src-frontend/: App.svelte  Audio.svelte  CodeMirror.svelte  index.html  thing.html
src-frontend/tests/: turbocharger.test.js
