[package]
authors = ["trevyn <trevyn-git@protonmail.com>"]
description = "Notesearch."
edition = "2018"
name = "notesearch"
publish = false
version = "0.1.0"

[lib]
crate-type = ["cdylib", "rlib"]
name = "turbocharger_generated"
path = "src/main.rs"

[dependencies]
# dependencies for both server and wasm
turbocharger = "0.1"
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"

[target.'cfg(target_arch = "wasm32")'.dependencies]
# dependencies for wasm only

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
# dependencies for server only
log = "0.4"
opener = "0.5"
pretty_env_logger = "0.4"
rust-embed = "6"
tokio = {version = "1", features = ["full"]}
turbosql = "0.3"
warp = {version = "0.3", features = ["tls"]}

[patch.crates-io]
rusqlite = {git = "https://github.com/rusqlite/rusqlite", branch = "master"}
warp = {git = "https://github.com/seanmonstar/warp", branch = "master"}
